// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonMenu/> should have the right class names 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
  onKeyDown={[Function]}
  role="presentation"
>
  <button
    aria-haspopup={true}
    className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-filled"
    data-id="button-icon-element"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        href="/icons/utility-sprite/svg/symbols.svg#down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    className="slds-dropdown slds-dropdown_left slds-dropdown_xx-small"
  >
    <ul
      className="slds-dropdown__list"
      role="menu"
    >
      <span />
    </ul>
  </div>
</div>
`;

exports[`<ButtonMenu/> should have the right class names when menuAlignment is left and isLoading is true 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
  onKeyDown={[Function]}
  role="presentation"
>
  <button
    aria-haspopup={true}
    className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-filled"
    data-id="button-icon-element"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        href="/icons/utility-sprite/svg/symbols.svg#down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    className="slds-dropdown slds-dropdown_left slds-dropdown_xx-small slds-icon_large"
  >
    <ul
      className="slds-dropdown__list"
      role="menu"
    >
      <div
        className="slds-spinner slds-spinner_small"
        role="status"
      >
        <span
          className="slds-assistive-text"
        >
          loading menu
        </span>
        <div
          className="slds-spinner__dot-a"
        />
        <div
          className="slds-spinner__dot-b"
        />
      </div>
    </ul>
  </div>
</div>
`;

exports[`<ButtonMenu/> should have the right class names when menuAlignment is right and menuSize is xx-small 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
  onKeyDown={[Function]}
  role="presentation"
>
  <button
    aria-haspopup={true}
    className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-filled"
    data-id="button-icon-element"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        href="/icons/utility-sprite/svg/symbols.svg#down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    className="slds-dropdown slds-dropdown_right slds-dropdown_xx-small"
  >
    <ul
      className="slds-dropdown__list"
      role="menu"
    >
      <span />
    </ul>
  </div>
</div>
`;

exports[`<ButtonMenu/> should have the right class names when menuSize is large 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
  onKeyDown={[Function]}
  role="presentation"
>
  <button
    aria-haspopup={true}
    className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-filled"
    data-id="button-icon-element"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        href="/icons/utility-sprite/svg/symbols.svg#down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    className="slds-dropdown slds-dropdown_left slds-dropdown_large"
  >
    <ul
      className="slds-dropdown__list"
      role="menu"
    >
      <span />
    </ul>
  </div>
</div>
`;

exports[`<ButtonMenu/> should have the right class names when menuSize is medium 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
  onKeyDown={[Function]}
  role="presentation"
>
  <button
    aria-haspopup={true}
    className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-filled"
    data-id="button-icon-element"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        href="/icons/utility-sprite/svg/symbols.svg#down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    className="slds-dropdown slds-dropdown_left slds-dropdown_medium"
  >
    <ul
      className="slds-dropdown__list"
      role="menu"
    >
      <span />
    </ul>
  </div>
</div>
`;

exports[`<ButtonMenu/> should have the right class names when menuSize is small 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
  onKeyDown={[Function]}
  role="presentation"
>
  <button
    aria-haspopup={true}
    className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-filled"
    data-id="button-icon-element"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        href="/icons/utility-sprite/svg/symbols.svg#down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    className="slds-dropdown slds-dropdown_left slds-dropdown_small"
  >
    <ul
      className="slds-dropdown__list"
      role="menu"
    >
      <span />
    </ul>
  </div>
</div>
`;

exports[`<ButtonMenu/> should have the right class names when menuSize is x-small 1`] = `
<div
  className="slds-dropdown-trigger slds-dropdown-trigger_click slds-button_last"
  onKeyDown={[Function]}
  role="presentation"
>
  <button
    aria-haspopup={true}
    className="slds-align_absolute-center slds-button slds-button_icon slds-button_icon-border-filled"
    data-id="button-icon-element"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        href="/icons/utility-sprite/svg/symbols.svg#down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <div
    className="slds-dropdown slds-dropdown_left slds-dropdown_x-small"
  >
    <ul
      className="slds-dropdown__list"
      role="menu"
    >
      <span />
    </ul>
  </div>
</div>
`;
